drop --enable-preview flags