@@ -58,7 +58,6 @@ repositories {
 
 compileJava {
     options.release = 22
-    options.compilerArgs << "--enable-preview"
     options.fork = true
     options.forkOptions.executable = "${jdk22_home}/bin/javac"
 }
@@ -122,8 +121,8 @@ task createJextractImage(type: Exec) {
     outputs.dir(jextract_app_dir)
 
     def quote_jlink_opts = Os.isFamily(Os.FAMILY_WINDOWS)?
-        '\\"--enable-native-access=org.openjdk.jextract\\" \\"--enable-preview\""' :
-        '"--enable-native-access=org.openjdk.jextract" "--enable-preview"'
+        '\\"--enable-native-access=org.openjdk.jextract\\"' :
+        '"--enable-native-access=org.openjdk.jextract"'
 
     doFirst {
         delete(jextract_app_dir)
@@ -232,7 +231,6 @@ void createJtregTask(String name, String jacocoAgent, String os_lib_dir) {
         args = [
                 "-jdk", "$buildDir/jextract-jdk-test-image",
                 "-nativepath:$buildDir/testlib-install/${os_lib_dir}",
-                "-javaoption:--enable-preview",
                 "-javaoption:--enable-native-access=org.openjdk.jextract,ALL-UNNAMED",
                 "-javacoption:--add-exports=org.openjdk.jextract/org.openjdk.jextract.json.parser=ALL-UNNAMED",
                 "-javaoption:--add-exports=org.openjdk.jextract/org.openjdk.jextract.json.parser=ALL-UNNAMED",
